--- a/milestone.css
+++ b/milestone.css
@@ -49,4 +49,13 @@ img {
 }
 .section-1 h1{
   color: Blue;
+  background-color: lightblue;
+}
+.section-2 h1{
+  background-color: lightgreen;
+  color: forestgreen;
+}
+.section-3 h1{
+  background-color:coral
+   
 }
